--- a/style.css
+++ b/style.css
@@ -1,91 +1,150 @@
 * {
-	margin: 0;
-	padding: 0;
-	
-	
+  margin: 0;
+  padding: 0;
+  /*border: 1px solid black;*/
+  box-sizing: border-box;
 }
 
 body {
-	font-family: pupins, sans-serif;
-	font-size: 16px;
-	
+  font-family: sans-serif;
 }
 
 .container {
-	width: 100%;
-	height: 100vh;
-	background-color: #4890DE;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #4890de;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .log-box {
-	width: 300px;
-	height: 370px;
-	color: #fff;
-	background-color: #de8248;
-	border-radius: 8px;
+  height: 400px;
+  width: 300px;
+  background-color: #4890de;
+  color: #fff;
+  padding-top: 60px;
+  text-align: center;
+  box-shadow: 10px 10px 28px rgb(84, 113, 238),
+    -10px -10px 28px rgb(89, 116, 206);
 }
 
 h2 {
-	text-align: center;
-	padding: 30px 0;
+  margin-bottom: 40px;
+  letter-spacing: 2px;
 }
 
-form {
-	text-align: center;
-	position: relative;
-	
+input[type="checkbox"]:hover {
+  cursor: pointer;
+}
+input[type="checkbox"] {
+  margin: 0;
+  vertical-align: middle;
 }
 
-input[type="email"], input[type="password"] {
-	outline: none;
-	border: 1px solid #fff;
-	padding: 7px 15px;
-	border-radius: 2px;
-	margin: 2px 0 20px;
-	
+input {
+  padding: 8px;
+  outline: none;
+  background: transparent;
+  border: 1px solid #fff;
+  margin: 5px;
+  border-radius: 5px;
+  color: #fff;
+}
+.chech {
+  margin-right: 20px;
 }
 
-input[type="password"] {
-	margin-bottom: 5px;
-}
-label {
-	width: 300px;
-	text-align: center;
-	font-size: 9px;
-	margin: 10px;
-	font-weight: bold;
+label,
+a {
+  font-size: 10px;
+  text-decoration: none;
+  color: #fff;
+  cursor: pointer;
+  margin: 0;
 }
 
 a {
-	text-decoration: none;
-	color: #fff;
-	font-size: 10px;
-	margin-left: 30px;
+  margin-left: 17px;
 }
 
 button {
-	width: 120px;
-	background: #4890DE;
-	padding: 7px;
-	border-radius: 2px;
-	border: 1px solid #4890DE;
-	font-weight: bold;
-	color: #fff;
-	margin-top: 20px;
-	
-	
+  background: transparent;
+  padding: 8px 65px;
+  border: 1px solid #fff;
+  margin-top: 8px;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
 }
- 
+button:active {
+  background-color: blue;
+  border: none;
+}
+
+/* ----------This is the primary design--------------------
+.log-box {
+  width: 300px;
+  height: 370px;
+  color: #fff;
+  background-color: #de8248;
+  border-radius: 8px;
+}
+
+h2 {
+  text-align: center;
+  padding: 30px 0;
+}
+
+form {
+  text-align: center;
+  position: relative;
+}
+
+input[type="email"],
+input[type="password"] {
+  outline: none;
+  border: 1px solid #fff;
+  padding: 7px 15px;
+  border-radius: 2px;
+  margin: 2px 0 20px;
+}
+
+input[type="password"] {
+  margin-bottom: 5px;
+}
+label {
+  width: 300px;
+  text-align: center;
+  font-size: 9px;
+  margin: 10px;
+  font-weight: bold;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 10px;
+  margin-left: 30px;
+}
+
+button {
+  width: 120px;
+  background: #4890de;
+  padding: 7px;
+  border-radius: 2px;
+  border: 1px solid #4890de;
+  font-weight: bold;
+  color: #fff;
+  margin-top: 20px;
+}
+
 .check {
-	margin-right: 5px;
+  margin-right: 5px;
 }
 input[type="checkbox"] {
-	position: absolute;
-	top: 130px;
-	left: 49px;
+  position: absolute;
+  top: 130px;
+  left: 49px;
 }
-
-
+*/
