--- a/style.css
+++ b/style.css
@@ -29,6 +29,29 @@ body {
     -10px -10px 28px rgb(89, 116, 206);
 }
 
+@media (max-width: 600px) {
+  .log-box {
+    width: 65vw;
+    box-shadow: none;
+  }
+  h2 {
+    font-size: 4vw;
+    
+  }
+
+  input {
+    width: 45vw;
+  }
+
+  button {
+    max-width: 45vw;
+
+  }
+  label {
+    font-size: 2vh;
+  }
+}
+
 h2 {
   margin-bottom: 40px;
   letter-spacing: 2px;
@@ -70,7 +93,8 @@ a {
 
 button {
   background: transparent;
-  padding: 8px 65px;
+  width: 185px;
+  height: 33px;
   border: 1px solid #fff;
   margin-top: 8px;
   border-radius: 5px;
